# khalib

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: checks.yaml  ci.yml  docs.yaml  tests.yaml
docs/: api.rst  conf.py  index.md  quickstart.ipynb  quickstart.py
src/: khalib.py
src/tests/: test_all.py  test_khiops_binning.py
src/tests/data/binning/ref/: test_happy_path_EqualFrequency-float-True.json  test_happy_path_EqualFrequency-int-True.json  test_happy_path_EqualWidth-float-True.json  test_happy_path_EqualWidth-int-False.json  test_happy_path_EqualWidth-int-True.json  test_happy_path_EqualWidth-intnl-True.json  test_happy_path_EqualWidth-str-True.json  test_happy_path_MODL-bool-True.json  test_happy_path_MODL-float-True.json  test_happy_path_MODL-int-False.json  test_happy_path_MODL-int-True.json  test_happy_path_MODL-str-True.json  test_no_info_target_EqualFrequency.json  test_no_info_target_EqualWidth.json  test_no_info_target_MODL.json  test_single_value_score_EqualFrequency-int-True.json  test_single_value_score_EqualWidth-int-False.json  test_single_value_score_MODL-float-True.json  test_single_value_score_MODL-intnl-True.json
src/tests/data/histogram/ref/: test_happy_path_EqualFrequency-bool-True.json  test_happy_path_EqualFrequency-str-True.json  test_happy_path_EqualWidth-bool-True.json  test_happy_path_MODL-intnl-True.json  test_happy_path_eq-freq-int-False.json  test_happy_path_eq-freq-intnl-True.json  test_single_value_score_modl-bool-True.json
src/tests/data/tables/: adult_scores_sample.tsv  vehicles_scores.tsv
