[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khalib"
version = "0.1b0"
description = "Classifier Calibration with Khiops"
authors = [{ name = "Felipe Olmos", email = "luisfelipe.olmosmarchant@orange.com" }]
requires-python = ">=3.11"
dependencies = [
    "khiops>=11.0.0.0b0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]


[tools.setuptools]
packages = ["khcalib"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "NPY",  # numpy
    "PD",   # pandas-vet
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # tidy imports
    "PT",   # flake8-pytest-style
    "PL",   # pylint rules
]
ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR0916", # too-many-boolean-expressions
  "PLR1702", # too-many-nested-blocks
  "PLR2004", # magic-value-comparison
  "PLW0120", # useless-else-on-loop
  "PLW0406", # import-self
  "PLW0603", # global-statement
]
# To fix by default isort fixes
extend-safe-fixes = ["I"]

[tool.uv.sources]
khiops = { url = "https://github.com/KhiopsML/khiops-python/releases/download/11.0.0.0-b.0/khiops-11.0.0.0b0.tar.gz" }

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "ipython>=8.27.0",
    "jupyterlab>=4.4.9",
    "jupyterlab-myst>=2.4.2",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.6",
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "numpydoc>=1.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-paramlinks>=0.6.0",
]
